force-app/main/default/objects/Apttus_Config2__ProductGroup__c/Apttus_Config2__ProductGroup__c.object-meta.xml
<CustomObject>
    <description>Represents a group of products</description>
    <label>Product Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>