force-app/main/default/objects/Apttus_Config2__ProductGroup__c/fields/Apttus_Config2__GroupType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__GroupType__c</fullName>
    <description>The group type</description>
    <inlineHelpText>The group type</inlineHelpText>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Ad Hoc Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>