force-app/main/default/objects/Apttus_Config2__ProductGroup__c/fields/Apttus_Config2__IncentiveId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncentiveId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ID of the associated incentive</label>
    <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
    <relationshipLabel>Product Groups</relationshipLabel>
    <relationshipName>ProductGroups</relationshipName>
    <type>Lookup</type>
</CustomField>